gcc/testsuite/gdc.test/compilable/b19432.d

void main(){
    enum a = 18446744073709551615; // 2^^64 - 1
    ulong b = 18446744073709551615; // 2^^64 - 1
}
