gcc/testsuite/gdc.test/fail_compilation/fail3150.d
// REQUIRED_ARGS: -de

void main() {
    ulong u = cast(ulong)[1,2];
}
